# streaming-download-assignment

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/assignment/: client.h  compile.h  data_collector.h  protocol.h
include/jigentec/: client.h  compile.h  data_collector.h  jigentec.h
src/: client.cc  data_collector.cc  main.cc
